# gstlaunch

./: .gitignore  Makefile.am  autogen.sh  configure.ac
src/: Makefile.am  gstlaunch.c
